--- a/app/templates/edit_book.html
+++ b/app/templates/edit_book.html
@@ -50,7 +50,7 @@
 
         <div class="mb-3">
             <label for="price" class="form-label">Prix ($)</label>
-            <input type="number" class="form-control" id="price" name="price" step="0.01" min="0" placeholder="Prix" required value="{{ book.price }}">
+            <input type="text" class="form-control" id="price" name="price" step="0.01" min="0" placeholder="Prix" required value="{{ book.price|floatformat:2 }}">
         </div>
 
         <div class="mb-3">
