--- a/member_app/templates/member_app/user_create.html
+++ b/member_app/templates/member_app/user_create.html
@@ -3,14 +3,14 @@
 
 {% block content %}
 
-<div class="container-fluid member-app">
+<div class="container-fluid member-app text-white">
     <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto">
-            <h2>Inscrivez-vous dès maintenant</h2>
+            <h2 class="text-white">Inscrivez-vous dès maintenant</h2>
             <br />
 
             <form method="POST">
-                <div class="form-group">
+                <div class="form-group text-white">
                     {% csrf_token %}
                     {{ form.as_p }}
 
